[gd_scene load_steps=9 format=3]

[ext_resource type="PackedScene" path="res://scenes/player/player.tscn" id="1"]
[ext_resource type="Script" path="res://scenes/levels/enemy_spawner.gd" id="2"]
[ext_resource type="PackedScene" path="res://scenes/enemies/bat.tscn" id="3"]
[ext_resource type="PackedScene" path="res://scenes/ui/health_bar.tscn" id="4"]
[ext_resource type="Script" path="res://scenes/levels/main.gd" id="5"]
[ext_resource type="Script" path="res://scenes/levels/world_generator.gd" id="6"]
[ext_resource type="Script" path="res://scenes/ui/xp_bar.gd" id="8"]
[ext_resource type="Script" path="res://scenes/levels/camera.gd" id="9"]

[node name="Main" type="Node2D"]
script = ExtResource("5")

[node name="WorldGenerator" type="Node2D" parent="."]
script = ExtResource("6")

[node name="YSortLayer" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Player" parent="YSortLayer" instance=ExtResource("1")]
position = Vector2(320, 180)

[node name="Camera2D" type="Camera2D" parent="YSortLayer/Player"]
script = ExtResource("9")

[node name="EnemySpawner" type="Node2D" parent="."]
script = ExtResource("2")
enemy_scene = ExtResource("3")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HealthBar" parent="UI" instance=ExtResource("4")]

[node name="XPBar" type="ProgressBar" parent="UI"]
offset_left = 8.0
offset_top = 26.0
offset_right = 140.0
offset_bottom = 36.0
script = ExtResource("8")
